--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "server": "nodemon server",
+        "server": "nodemon server --ignore client",
+        "client": "cd client && npm start",
+        "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -22,9 +24,12 @@
     "dependencies": {
         "@notionhq/client": "^2.2.13",
         "dotenv": "^16.3.1",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "googleapis": "^128.0.0",
+        "http-status-codes": "^2.3.0"
     },
     "devDependencies": {
+        "concurrently": "^8.2.2",
         "nodemon": "^3.0.1"
     }
 }
