--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "homepage": "https://github.com/helenduz/notog#readme",
     "dependencies": {
         "@notionhq/client": "^2.2.13",
+        "color": "^4.2.3",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "googleapis": "^128.0.0",
-        "http-status-codes": "^2.3.0"
+        "http-status-codes": "^2.3.0",
+        "react-router-dom": "^6.20.0"
     },
     "devDependencies": {
         "concurrently": "^8.2.2",
