--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "homepage": "https://github.com/helenduz/notog#readme",
     "dependencies": {
         "@notionhq/client": "^2.2.13",
+        "axios": "^1.6.2",
         "color": "^4.2.3",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "googleapis": "^128.0.0",
         "http-status-codes": "^2.3.0",
+        "image-type": "^5.2.0",
         "react-router-dom": "^6.20.0"
     },
     "devDependencies": {
